syntax = "proto3";

package dodo.benchmark;
import public "gayrpc_option.proto";

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string message = 1;
}

service EchoServer {
    rpc Echo(EchoRequest) returns(EchoResponse) {
        option (message_id)= 2333;
    };
}